--- a/snoopy.qsf
+++ b/snoopy.qsf
@@ -309,11 +309,14 @@ set_location_assignment PIN_E12 -to VGA_R[6]
 set_location_assignment PIN_F13 -to VGA_R[7]
 set_location_assignment PIN_C10 -to VGA_SYNC_N
 set_location_assignment PIN_D11 -to VGA_VS
+set_global_assignment -name VERILOG_FILE FSM/snoopyVerticalFSM.v
+set_global_assignment -name VERILOG_FILE FSM/snoopyHorizintalFSM.v
+set_global_assignment -name VERILOG_FILE VGAmodule.v
 set_global_assignment -name VERILOG_FILE vga_adapter/vga_pll.v
 set_global_assignment -name VERILOG_FILE vga_adapter/vga_controller.v
 set_global_assignment -name VERILOG_FILE vga_adapter/vga_address_translator.v
 set_global_assignment -name VERILOG_FILE vga_adapter/vga_adapter.v
-set_global_assignment -name VERILOG_FILE snoopyCharacter.v
 set_global_assignment -name VERILOG_FILE snoopy.v
 set_global_assignment -name VERILOG_FILE characterCounter.v
+set_global_assignment -name QIP_FILE snoopyCharacter2.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
